--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,22 +10,23 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
-    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.19.2",
-    "expo": "~38.0.8",
-    "expo-font": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
+    "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
+    "expo-status-bar": "^1.2.0",
+    "react": "~18.0.0",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native": "https://github.com/expo/react-native#sdk-44.0.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "~3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
